# Practice

ComputationalAdvertising/: .bazelrc  .gitignore  LICENSE  MODULE.bazel  README.md  WORKSPACE  build.sh  deps.yaml
ComputationalAdvertising/.github/workflows/: build.yml  release.yml
ComputationalAdvertising/bazel/: absl.BUILD  absl.MODULE  absl.WORKSPACE  apache_tvm.BUILD  apache_tvm.MODULE  apache_tvm.WORKSPACE  benchmark.BUILD  benchmark.MODULE  benchmark.WORKSPACE  bs_thread_pool.BUILD  bs_thread_pool.MODULE  bs_thread_pool.WORKSPACE  dnnl.BUILD  dnnl.MODULE  dnnl.WORKSPACE  gflags.BUILD  gflags.MODULE  gflags.WORKSPACE  glog.BUILD  glog.MODULE  glog.WORKSPACE  googletest.BUILD  googletest.MODULE  googletest.WORKSPACE  jemalloc.BUILD  jemalloc.MODULE  jemalloc.WORKSPACE  libtensorflow.BUILD  libtensorflow.MODULE  libtensorflow.WORKSPACE  nlohmann_json.BUILD  nlohmann_json.MODULE  nlohmann_json.WORKSPACE  onnxruntime.BUILD  onnxruntime.MODULE  onnxruntime.WORKSPACE  onnxruntime_dnnl.BUILD  onnxruntime_dnnl.MODULE  onnxruntime_dnnl.WORKSPACE  protobuf.BUILD  (+5 more)
ComputationalAdvertising/data/: BUILD
ComputationalAdvertising/data/files/: hello
ComputationalAdvertising/data/models/: __list__.json
ComputationalAdvertising/data/models/model_1/2/: graph.onnx  graph.pb
ComputationalAdvertising/docker/: Dockerfile  Dockerfile.base
ComputationalAdvertising/script/: check_deps.py  deps.sh  docker_build.py  find_symbol_def.sh  functional.sh  show_inout.sh  tf_runmetadata_visualization.py
ComputationalAdvertising/src/: BUILD
ComputationalAdvertising/src/benchmark/: bm_flat_hash_map.cpp  bm_onnx_engine.cpp  bm_tf_engine.cpp
ComputationalAdvertising/src/config/: gflags.cpp  gflags.h
ComputationalAdvertising/src/embedding/: embedding.h
ComputationalAdvertising/src/engine/: engine.h  onnx_dnnl_engine.cpp  onnx_dnnl_engine.h  onnx_engine.cpp  onnx_engine.h  sample.h  tf2_engine.cpp  tf2_engine.h  tf2_gpu_engine.cpp  tf2_gpu_engine.h  tf_engine.cpp  tf_engine.h  tf_gpu_engine.cpp  tf_gpu_engine.h  trt_engine.cpp  trt_engine.h  tvm_engine.cpp  tvm_engine.h
ComputationalAdvertising/src/population/: lifecycle.cpp  lifecycle.h  model_spec.cpp  model_spec.h  population.cpp  population.h  roster.cpp  roster.h
ComputationalAdvertising/src/proto/: perf.proto
ComputationalAdvertising/src/unittest/engine/: test_onnx_engine.cpp  test_tf_engine.cpp
ComputationalAdvertising/src/unittest/util/: test.cpp
ComputationalAdvertising/src/util/: comm.cpp  comm.h  io.cpp  io.h  serialize.cpp  serialize.h
ComputationalAdvertising/src/util/algorithm/: search.h
ComputationalAdvertising/src/util/functional/: timer.h
ComputationalAdvertising/src/util/os/: macros.h  network.cpp  network.h  resource_used.cpp  resource_used.h  semaphore.cpp  semaphore.h  thread_cpu.cpp  thread_cpu.h  vpopen.cpp  vpopen.h
ComputationalAdvertising/src/util/process/: process_initiator.h  process_status.cpp  process_status.h
MachineLearningPlatform/: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt
MachineLearningPlatform/docs/: temporal_decay_analysis.md
MachineLearningPlatform/legacy/notebooks/: [Data][DynamicRTBFeature][TrainingData].py  [Data][InferenceLog].py  [Sequential][GT][CapNavigationPlot].py  [Sequential][GT][ControlGroupMetrics].py  [Sequential][GT][DailyPremiumSimilarity].py  [Sequential][GT][OverlapSimilarity].py  [Sequential][GT][PreferenceHeatmap].py  [Sequential][GT][PreferenceVectorSimilarity].py  [Sequential][GT][QPSCapNavigation].py  [Sequential][GT][SimilarityHeatmap].py  [Sequential][GT][TrafficSimilarity].py
MachineLearningPlatform/legacy/utils/: data_validation.py  feature_engineering.py  model_training.py
MachineLearningPlatform/ml_platform/: cli.py
MachineLearningPlatform/ml_platform/conf/: __init__.py  features.yaml  tasks.yaml
MachineLearningPlatform/ml_platform/conf/sources/: __init__.py  auction_logs.yaml  exchange_logs.yaml  project_report.yaml  task_outputs.yaml
MachineLearningPlatform/ml_platform/config/: __init__.py  loader.py  models.py  validators.py
MachineLearningPlatform/ml_platform/core/: pipeline.py
MachineLearningPlatform/ml_platform/tasks/: __init__.py  base.py  enrichment.py  etl.py  training.py  visualization.py
MachineLearningPlatform/scripts/: [analysis][daily_similarity_trend].py  [analysis][day_to_day_similarity].py  [analysis][holt_linear_prediction].py  [analysis][hour_to_hour_similarity].py  [analysis][quick_decay_check].py  [data][find_table].py  [validate][aggregate_hourly_win_price].py  [validate][compute_rolling_win_price_by_publisher].py  build_wheel.sh
MachineLearningPlatform/tests/: __init__.py
MachineLearningPlatform/tests/config/: __init__.py  test_bundled_config.py  test_loader.py  test_models.py  test_validators.py
Shell/: flac2mp3.sh  ray-job-examples.sh  setup-kind-with-registry.sh
Shell/lib/: common.sh
Shell/manifests/: raycluster.yaml
Shell/ray-examples/: 01_hello.py  02_parallel.py  03_actors.py  04_data.py  05_ml.py
SparkParameterServer/: .gitignore  README.md  requirements.txt  setup.py
SparkParameterServer/distributed_trainer/: __init__.py  batch_iterator.py  config.py  data_loader.py  tf_model_wrapper.py  thread_config.py  trainer.py  worker.py
SparkParameterServer/distributed_trainer/examples/: __init__.py  simple_training.py  train_demo.py
SparkParameterServer/distributed_trainer/tests/: __init__.py  test_batch_iterator.py  test_config.py  test_integration.py  test_tf_model_wrapper.py
SparkParameterServer/pyspark_ps/: __init__.py
(+36 files in other folders)
